# xdsl-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  renovate.json
.github/workflows/: ci-code-formatting.yml  ci-core.yml  ci-lockfile.yml  ci-pyright.yml  docs.yml  lockfile.yml  test.yaml  update.yaml
docs/: reference.md
src/xdsltemplate/: __init__.py  compiler.py  universe.py
src/xdsltemplate/dialects/: __init__.py
src/xdsltemplate/transforms/: __init__.py
tests/: test_example.py
